--- a/karl-shop/src/index.html
+++ b/karl-shop/src/index.html
@@ -30,13 +30,13 @@
   <!-- jQuery (Necessary for All JavaScript Plugins) -->
   <script src="./assets/js/jquery/jquery-2.2.4.min.js"></script>
   <!-- Popper js -->
-  <script src="./assets/js/popper.min.js"></script>
+  <script src="./assets/js/popper.min.js" defer></script>
   <!-- Bootstrap js -->
   <script src="./assets/js/bootstrap.min.js"></script>
   <!-- Plugins js -->
-  <script src="./assets/js/plugins.js"></script>
+  <script src="./assets/js/plugins.js" defer></script>
   <!-- Active js -->
-  <script src="./assets/js/active.js" async></script>
+  <script src="./assets/js/active.js"></script>
 
 </body>
 
