--- a/karl-shop/src/index.html
+++ b/karl-shop/src/index.html
@@ -20,7 +20,8 @@
   <link rel="stylesheet" href="./assets/css/core-style.css">
   <!-- Responsive CSS -->
   <link href="./assets/css/responsive.css" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 
 <body>
