--- a/karl-shop/src/index.html
+++ b/karl-shop/src/index.html
@@ -9,7 +9,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+  <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
+  <!-- <meta name="google-signin-client_id" content="671348599262-i45l62rjuek2ikh0e2opabai9u7h8rfi.apps.googleusercontent.com"> -->
   <!-- Title  -->
   <title>Karl - Fashion</title>
 
