--- a/karl-shop/src/index.html
+++ b/karl-shop/src/index.html
@@ -22,13 +22,15 @@
   <!-- Responsive CSS -->
   <link href="./assets/css/responsive.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/toastr.min.css">
 </head>
 
 <body>
   <app-root></app-root>
 
-  
+
   <!-- jQuery (Necessary for All JavaScript Plugins) -->
   <script src="./assets/js/jquery/jquery-2.2.4.min.js"></script>
   <!-- Popper js -->
@@ -39,6 +41,8 @@
   <script src="./assets/js/plugins.js" defer></script>
   <!-- Active js -->
   <script src="./assets/js/active.js"></script>
+  <script src="./assets/js/toastr.min.js"></script>
+
 </body>
 
 </html>
