--- a/ShoesAdmin/src/index.html
+++ b/ShoesAdmin/src/index.html
@@ -70,6 +70,8 @@
   <script src="../assets/app-assets/vendors/js/jquery.countdown.min.js" type="text/javascript"></script>
   <script src="../assets/app-assets/js/coming-soon.js" type="text/javascript"></script>
   <!-- <script src="app-assets/js/components-modal.min.js" type="text/javascript"></script> -->
+  <script src="../assets/app-assets/js/sweet-alerts.js" type="text/javascript"></script>
+  <script src="../assets/app-assets/vendors/js/sweetalert2.min.js" type="text/javascript"></script>
   <!-- END PAGE VENDOR JS-->
 
   <script>
