- Fix CSS - Add Toastr

--- a/ShoesAdmin/src/index.html
+++ b/ShoesAdmin/src/index.html
@@ -37,6 +37,9 @@
   <!-- BEGIN APEX CSS-->
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/css/app.css">
   <!-- END APEX CSS-->
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=vietnamese" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/ng2-toastr@4.1.2/ng2-toastr.css" rel="stylesheet" />
 
 </head>
 
