--- a/ShoesAdmin/src/index.html
+++ b/ShoesAdmin/src/index.html
@@ -33,6 +33,7 @@
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/prism.min.css">
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/chartist.min.css">
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/tables/datatable/datatables.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/sweetalert2.min.css"> -->
   <!-- END VENDOR CSS-->
   <!-- BEGIN APEX CSS-->
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/css/app.css">
@@ -40,7 +41,7 @@
   <!-- Google font -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=vietnamese" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/ng2-toastr@4.1.2/ng2-toastr.css" rel="stylesheet" />
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 </head>
 
 <body>
@@ -75,14 +76,8 @@
   <!-- <script src="app-assets/js/components-modal.min.js" type="text/javascript"></script> -->
   <script src="../assets/app-assets/js/sweet-alerts.js" type="text/javascript"></script>
   <script src="../assets/app-assets/vendors/js/sweetalert2.min.js" type="text/javascript"></script>
+  <script src="../assets/app-assets/js/components-modal.min.js" type="text/javascript"></script>
   <!-- END PAGE VENDOR JS-->
-
-  <script>
-    $(document).ready(function () {
-      $('#table_kh').DataTable();
-      $('#table_nv').DataTable();
-    });
-  </script>
 </body>
 
 </html>
