Update phan trang

--- a/ShoesAdmin/src/index.html
+++ b/ShoesAdmin/src/index.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/fonts/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/perfect-scrollbar.min.css">
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/prism.min.css">
-  <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/chartist.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/chartist.min.css"> -->
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/tables/datatable/datatables.min.css">
   <!-- <link rel="stylesheet" type="text/css" href="../assets/app-assets/vendors/css/sweetalert2.min.css"> -->
   <!-- END VENDOR CSS-->
