--- a/ShoesAdmin/src/index.html
+++ b/ShoesAdmin/src/index.html
@@ -59,7 +59,7 @@
   <script src="../assets/app-assets/vendors/js/pace/pace.min.js" type="text/javascript"></script>
   <!-- BEGIN VENDOR JS-->
   <!-- BEGIN PAGE VENDOR JS-->
-  <script src="../assets/app-assets/vendors/js/chartist.min.js" type="text/javascript"></script>
+  <!-- <script src="../assets/app-assets/vendors/js/chartist.min.js" type="text/javascript"></script> -->
   <script src="../assets/app-assets/vendors/js/datatable/datatables.min.js" type="text/javascript"></script>
   <!-- END PAGE VENDOR JS-->
   <!-- BEGIN APEX JS-->
