--- a/ShoesAdmin/src/index.html
+++ b/ShoesAdmin/src/index.html
@@ -23,6 +23,8 @@
   <meta name="apple-touch-fullscreen" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900|Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
+  <!-- modal -->
+  <link rel="stylesheet" href="../assets/app-assets/css/bootstrap.min.css">
   <!-- BEGIN VENDOR CSS-->
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/css/fonts.css">
   <!-- font icons-->
@@ -78,6 +80,10 @@
   <script src="../assets/app-assets/vendors/js/sweetalert2.min.js" type="text/javascript"></script>
   <script src="../assets/app-assets/js/components-modal.min.js" type="text/javascript"></script>
   <!-- END PAGE VENDOR JS-->
+  <!-- Modal -->
+  <script src="../assets/app-assets/js/jquery.min.js"></script>
+  <script src="../assets/app-assets/js/popper.min.js"></script>
+  <script src="../assets/app-assets/js/bootstrap.min.js"></script>
 </body>
 
 </html>
