File Export Data Table

--- a/ShoesAdmin/src/index.html
+++ b/ShoesAdmin/src/index.html
@@ -25,6 +25,9 @@
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900|Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
   <!-- modal -->
   <link rel="stylesheet" href="../assets/app-assets/css/bootstrap.min.css">
+  <!-- data export -->
+  <!-- <link rel="stylesheet" href="../assets/app-assets/css/jquery.dataTables.min.css"> -->
+  <!-- <link rel="stylesheet" href="../assets/app-assets/css/buttons.dataTables.min.css"> -->
   <!-- BEGIN VENDOR CSS-->
   <link rel="stylesheet" type="text/css" href="../assets/app-assets/css/fonts.css">
   <!-- font icons-->
@@ -81,9 +84,7 @@
   <script src="../assets/app-assets/js/components-modal.min.js" type="text/javascript"></script>
   <!-- END PAGE VENDOR JS-->
   <!-- Modal -->
-  <script src="../assets/app-assets/js/jquery.min.js"></script>
-  <script src="../assets/app-assets/js/popper.min.js"></script>
-  <script src="../assets/app-assets/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
