Edit modal confirm

--- a/ShoesAdmin/src/index.html
+++ b/ShoesAdmin/src/index.html
@@ -24,7 +24,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900|Montserrat:300,400,500,600,700,800,900" rel="stylesheet">
   <!-- modal -->
-  <link rel="stylesheet" href="../assets/app-assets/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="../assets/app-assets/css/bootstrap.min.css"> -->
   <!-- data export -->
   <!-- <link rel="stylesheet" href="../assets/app-assets/css/jquery.dataTables.min.css"> -->
   <!-- <link rel="stylesheet" href="../assets/app-assets/css/buttons.dataTables.min.css"> -->
